--- a/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable/DetailsRows/DetailsRows.module.css
+++ b/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable/DetailsRows/DetailsRows.module.css
@@ -1,11 +1,15 @@
 .row {
   display: grid;
-  grid-template-columns: 1fr repeat(7, 80px) 50px;
+  grid-template-columns: 1fr 90px 90px 150px repeat(4, 90px) 50px;
   grid-template-rows: 1fr;
-  gap: 10px;
-  padding: 10px;
   padding-bottom: 0px;
   outline: 1px solid var(--border);
+}
+
+.row input,
+.row select,
+.row button {
+  border-radius: 0;
 }
 
 .row input {
