--- a/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable/DetailsTable.module.css
+++ b/src/components/Dashboard/Tables/SalesTable/Form/DetailsTable/DetailsTable.module.css
@@ -38,15 +38,18 @@
 
 .row {
   display: grid;
-  grid-template-columns: 1fr repeat(7, 80px) 50px 35px;
+  grid-template-columns: 1fr 90px 90px 150px repeat(4, 90px) 50px;
   grid-template-rows: 1fr;
-  gap: 10px;
   padding: 10px;
   outline: 1px solid var(--border);
 }
 
+.row span {
+  padding-left: 10px;
+}
+
 .firstRow {
-  padding-right: 20px;
+  padding-right: 15px;
   color: white;
   background-color: var(--dark-panel);
 }
